Fix layout issues - width constrained to 100%
Need to override min-width for display: flex to allow items to be smaller than their content.

--- a/src/gwt/panmirror/src/editor/src/behaviors/insert_citation/panels/insert_citation-panel-bibliography.css
+++ b/src/gwt/panmirror/src/editor/src/behaviors/insert_citation/panels/insert_citation-panel-bibliography.css
@@ -16,3 +16,100 @@
   box-sizing:border-box;
   height: 28px !important;
 }
+
+.pm-insert-citation-panel-item {
+  display: flex;
+  align-items: center;
+  height: 60px;
+}
+
+.pm-insert-citation-panel-item-type {
+  margin-left: 6px;
+  margin-right: 6px;
+  display: flex;
+  align-items: center;
+  position: relative; 
+  flex-shrink: 0;
+}
+
+.pm-insert-citation-panel-item-summary {
+  flex-grow:1;
+  flex-shrink: 1;
+  
+  display: flex;
+  flex-direction: column;
+  padding-top: 6px;
+  padding-right: 4px;
+  padding-bottom: 4px;
+  padding-left: 0px;
+  line-height: 20px;
+  font-size: 14px;
+
+  min-width: 0;
+}
+
+.pm-insert-citation-panel-item-button {
+  flex-shrink: 0;
+}
+
+.pm-insert-citation-panel-item-icon {
+  border: solid 1px;
+  border-radius: 2px;
+  padding: 4px;
+  height: 24px;
+  width: 24px;
+  margin-top: 1px;
+  margin-right: 6px;
+  filter: opacity(0.8);
+}
+
+.pm-insert-citation-panel-item-adorn {
+  border: solid 1px;
+  border-radius: 2px;
+  height: 6px;
+  width: 6px;
+  padding: 2px;
+  position: absolute;
+  bottom: -3px;
+  right: 1px;
+  filter: opacity(1.0) !important;
+  z-index: 900;
+}
+
+.pm-insert-citation-panel-item-id {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.pm-completion-item-primary {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+}
+
+.pm-insert-citation-panel-item-title {
+  margin-right: 8px;
+  font-weight: 500;
+  font-size: 10pt;
+  opacity: 0.8;
+}
+
+.pm-insert-citation-panel-item-detail {
+  font-size: 9pt;
+  opacity: 0.6;
+}
+
+.pm-insert-citation-panel-item-subtitle-text {
+  flex-shrink: 1;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  min-width: 0;
+
+  line-height: 18px;
+  font-size: 9pt;
+  opacity: 0.6;
+}
